--- a/hw2.ipynb
+++ b/hw2.ipynb
@@ -92,6 +92,131 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "with affine gap:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1., -1.:\n",
+      "\n",
+      "T A C G G G C C _ _ C G C T A C\n",
+      "T A _ G C C C T A T C G G T C A\n",
+      "\n",
+      "\n",
+      "-5., -1.:\n",
+      "\n",
+      "T A _ C G G G C C C G C T A C\n",
+      "T A G C C C T A T C G G T C A\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pprint import pprint\n",
+    "\n",
+    "global MIN\n",
+    "MIN = -float(\"inf\")\n",
+    "\n",
+    "#return match or mismatch score\n",
+    "def _match(s, t, i, j, match, mismatch):\n",
+    "    if t[i-1] == s[j-1]:\n",
+    "        return match\n",
+    "    else:\n",
+    "        return mismatch\n",
+    "\n",
+    "#initializers for matrices\n",
+    "def _init_x(i, j):\n",
+    "    if i > 0 and j == 0:\n",
+    "        return MIN\n",
+    "    else:\n",
+    "        if j > 0:\n",
+    "            return -10 + (-0.5 * j)\n",
+    "        else:\n",
+    "            return 0\n",
+    "\n",
+    "def _init_y(i, j):\n",
+    "    if j > 0 and i == 0:\n",
+    "        return MIN\n",
+    "    else:\n",
+    "        if i > 0:\n",
+    "            return -10 + (-0.5 * i)\n",
+    "        else:\n",
+    "            return 0\n",
+    "\n",
+    "def _init_m(i, j):\n",
+    "    if j == 0 and i == 0:\n",
+    "        return 0\n",
+    "    else:\n",
+    "        if j == 0 or i == 0:\n",
+    "            return MIN\n",
+    "        else:\n",
+    "            return 0\n",
+    "\n",
+    "def _format_tuple(inlist, i, j):\n",
+    "    return 0\n",
+    "\n",
+    "def distance_matrix(s, t, match, mismatch, S, E):\n",
+    "    dim_i = len(t) + 1\n",
+    "    dim_j = len(s) + 1\n",
+    "    #abuse list comprehensions to create matrices\n",
+    "    X = [[_init_x(i, j) for j in range(0, dim_j)] for i in range(0, dim_i)]\n",
+    "    Y = [[_init_y(i, j) for j in range(0, dim_j)] for i in range(0, dim_i)]\n",
+    "    M = [[_init_m(i, j) for j in range(0, dim_j)] for i in range(0, dim_i)]\n",
+    "\n",
+    "    for j in range(1, dim_j):\n",
+    "        for i in range(1, dim_i):\n",
+    "            X[i][j] = max((S + E + M[i][j-1]), (E + X[i][j-1]), (S + E + Y[i][j-1]))\n",
+    "            Y[i][j] = max((S + E + M[i-1][j]), (S + E + X[i-1][j]), (E + Y[i-1][j]))\n",
+    "            M[i][j] = max(_match(s, t, i, j, match, mismatch) + M[i-1][j-1], X[i][j], Y[i][j])\n",
+    "\n",
+    "    return [X, Y, M]\n",
+    "\n",
+    "def backtrace(s, t, X, Y, M, match, mismatch):\n",
+    "    sequ1 = ''\n",
+    "    sequ2 = ''\n",
+    "    i = len(t)\n",
+    "    j = len(s)\n",
+    "    while (i>0 or j>0):\n",
+    "        if (i>0 and j>0 and M[i][j] == M[i-1][j-1] + _match(s, t, i, j, match, mismatch)):\n",
+    "            sequ1 += s[j-1]\n",
+    "            sequ2 += t[i-1]\n",
+    "            i -= 1; j -= 1\n",
+    "        elif (i>0 and M[i][j] == Y[i][j]):\n",
+    "            sequ1 += '_'\n",
+    "            sequ2 += t[i-1]\n",
+    "            i -= 1\n",
+    "        elif (j>0 and M[i][j] == X[i][j]):\n",
+    "            sequ1 += s[j-1]\n",
+    "            sequ2 += '_'\n",
+    "            j -= 1\n",
+    "\n",
+    "    sequ1r = ' '.join([sequ1[j] for j in range(-1, -(len(sequ1)+1), -1)])\n",
+    "    sequ2r = ' '.join([sequ2[j] for j in range(-1, -(len(sequ2)+1), -1)])\n",
+    "\n",
+    "    return [sequ1r, sequ2r]\n",
+    "\n",
+    "def affine_gap_alignment(seq1, seq2, weight_match, weight_mismatch, open_gap_penalty, continue_gap_penalty):\n",
+    "    [X, Y, M] = distance_matrix(seq1, seq2, weight_match, weight_mismatch, open_gap_penalty, continue_gap_penalty)\n",
+    "    [str1, str2] = backtrace(seq1, seq2, X, Y, M, weight_match, weight_mismatch)\n",
+    "    print(str1)\n",
+    "    print(str2)\n",
+    "\n",
+    "print('-1., -1.:\\n')\n",
+    "affine_gap_alignment('TACGGGCCCGCTAC', 'TAGCCCTATCGGTCA', 1., -1., -1., -1.)\n",
+    "print('\\n\\n-5., -1.:\\n')\n",
+    "affine_gap_alignment('TACGGGCCCGCTAC', 'TAGCCCTATCGGTCA', 1., -1., -5., -1.)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
