--- a/hw6.ipynb
+++ b/hw6.ipynb
@@ -9,14 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 233,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "tests = [\n",
     "    {\n",
     "        'p': [0.5, 0.5],\n",
-    "        'a': [[0.8, 0.2], [0.8, 0.2]],\n",
+    "        'a': [[0.8, 0.2], [0.2, 0.8]],\n",
     "        'b': [[0.5, 0.5], [0.1, 0.9]],\n",
     "        'seq_open': 'ОРОРОРООРРРРРРРРРРОООООООО',\n",
     "    },\n",
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,20 +63,23 @@
     "                    d_max = d\n",
     "                    i_max = i\n",
     "            d_next.append(d_max)\n",
-    "            s.append(str(i_max+1))\n",
+    "            s.append(i_max)\n",
     "        d_cur = d_next.copy()\n",
     "        states.append(s)\n",
-    "    i_max = 0\n",
-    "    d_max = d_cur[0]\n",
+    "    i_max_last = 0\n",
     "    for i in range(1, n):\n",
-    "        if d_cur[i] > d_max:\n",
-    "            d_max = d_cur[i]\n",
-    "            i_max = i\n",
-    "    seq_hidden = ''\n",
-    "    for s in states:\n",
-    "        seq_hidden += s[i_max]\n",
+    "        if d_cur[i] > d_cur[i_max_last]:\n",
+    "            i_max_last = i\n",
+    "    seq_hidden = str(i_max_last+1)\n",
     "\n",
-    "    return seq_hidden+str(i_max+1)"
+    "    # восстанавливаем последовательность скрытых состояний  \n",
+    "    for t in range(m-2, -1, -1):\n",
+    "        i_max_last = states[t][i_max_last]\n",
+    "        seq_hidden = str(i_max_last+1)+seq_hidden\n",
+    "#     print(states)\n",
+    "#     print(i_max_last)\n",
+    "#     print(''.join(list(map(lambda x: str(x), seq_open))))\n",
+    "    return seq_hidden"
    ]
   },
   {
@@ -88,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -177,11 +180,11 @@
      "text": [
       "1\n",
       "\n",
-      "11111111111111111111111111\n",
+      "11111111222222222211111111\n",
       "\n",
-      "0.08901443107721661 0.08959055122844505 0.12636035056460657 0.11128479228055785 0.15697327293441116 0.13856751789323157 0.19669448999558192 0.20034427035182534 0.16462225040293316 0.1868011938148409 0.21196964468713228 0.24053498938296478 0.2729739321154258 0.30988682972694565 0.35219962174878494 0.4019705477830001 0.46568374435177884 0.5677787845814921 0.8063224107972041 0.829200580106739 0.8527278769200721 0.8769226030404245 0.9018012042307476 0.9273296620235397 0.9523809523809524 0.9523809523809523\n",
+      "0.24087379358746808 0.2340879800107745 0.2737360750684785 0.2639282430864752 0.3055696366696417 0.29316632885340455 0.3380271853748625 0.3202990835941842 0.17370143808441862 0.10659356366969079 0.07687600826705111 0.06561507175793106 0.06519148731091888 0.07440693263793226 0.09742459016240625 0.14572197975082435 0.2439408598065487 0.4426050896848212 0.8442655361560182 0.9248711156153782 0.9466086904077708 0.9575586846569769 0.9663534579981261 0.9735965198844854 0.9743863720160683 0.9422168142920906\n",
       "\n",
-      "0.009992282163546478 0.017226766064214895 0.003545948716638752 0.02139357581227903 0.004389675872397752 0.02625441868790011 0.004228410949603817 0.00618494414353572 0.04573923346648346 0.051901069269412174 0.058892086344387036 0.06682099541337705 0.07580180248987309 0.08592537184042182 0.09713628135528621 0.10871890375273804 0.11717354993357137 0.1074626447285871 0.01695682684595958 0.017437951230325443 0.017932732192003885 0.018441667725651253 0.018967528961698066 0.019561602418745282 0.021315192743764175 0.04761904761904762\n"
+      "0.019163764066848044 0.03227914843897203 0.018829568480130947 0.034785451147469004 0.02095600029964889 0.039944985430342715 0.025476069809484067 0.05028094787384945 0.19771785775133194 0.26825464099637575 0.3029733041485886 0.3206710997073234 0.32958174106175636 0.33255948163338933 0.32898322489304105 0.3146319512948029 0.2795898032863227 0.20315284156602006 0.043126185583541185 0.013812317080820112 0.008496807756023229 0.007632004359246276 0.007819234372834436 0.009399110518956153 0.017360347855776018 0.057783185707909454\n"
      ]
     }
    ],
@@ -191,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
