--- a/hw6.ipynb
+++ b/hw6.ipynb
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,45 +99,64 @@
     "    seq_open = list(map(lambda x: 0 if x == 'О' else 1, seq))\n",
     "    n = len(p)\n",
     "    m = len(seq_open)\n",
-    "    alphas = []\n",
-    "    alphas_init = p.copy()\n",
-    "    for i in range(n):\n",
-    "        alphas_init[i] *= b[i][seq_open[0]]\n",
-    "    alphas.append(alphas_init)\n",
+    "    \n",
+    "    # инициализируем альфы\n",
+    "    alphas = list(map(\n",
+    "        lambda x: [x],\n",
+    "        product(p, column(b, seq_open[0]))\n",
+    "    ))\n",
+    "    \n",
+    "    # вычисляем альфы\n",
     "    for t in range(1, m):\n",
-    "        alphas_cur = []\n",
     "        for j in range(n):\n",
-    "            alpha = 0\n",
-    "            for i in range(n):\n",
-    "                alpha += alphas[t-1][i]*a[i][j]*b[j][seq_open[t]]\n",
-    "            alphas_cur.append(alpha)\n",
-    "        alphas.append(alphas_cur)\n",
+    "#             print(j, column(alphas, t-1), column(a, j))\n",
+    "            alphas[j].append(b[j][seq_open[t]] * dot(column(alphas, t-1), column(a, j)))\n",
+    "    \n",
+    "    # инициализируем беты\n",
     "    betas = []\n",
     "    for _ in range(n):\n",
     "        betas.append([1])\n",
+    "    \n",
+    "    # вычисляем беты\n",
     "    for t in range(m-1, 0, -1):\n",
+    "        last_betas = column(betas, -1)\n",
     "        for i in range(n):\n",
-    "            beta = 0\n",
-    "            for j in range(n):\n",
-    "                beta += betas[j][-1]*a[i][j]*b[j][seq_open[t]]\n",
-    "            betas[i].append(beta)\n",
+    "            betas[i].append(dot(\n",
+    "                product(last_betas, a[i]),\n",
+    "                column(b, seq_open[t])\n",
+    "            ))\n",
     "    for i in range(n):\n",
     "        betas[i].reverse()\n",
-    "    prob = 0\n",
-    "    for i in range(n):\n",
-    "        prob += alphas[-1][i]\n",
-    "#     print(alphas)\n",
-    "#     print(betas)\n",
+    "    \n",
+    "    # вычисляем нормирующий множитель\n",
+    "    prob = sum(column(alphas, -1))\n",
+    "    \n",
     "#     print(prob)\n",
-    "    results = []\n",
+    "#     print(betas)\n",
+    "    \n",
+    "    # вычисляем и выводим результат\n",
+    "#     results = []\n",
     "    for i in range(n):\n",
-    "        results.append([])\n",
-    "    for t in range(m):\n",
-    "        for i in range(n):\n",
-    "            results[i].append(str((alphas[t][i]*betas[i][t])/prob))\n",
-    "    for i in range(n):\n",
+    "        result = [ (a/prob)*b for (a,b) in zip(alphas[i],betas[i]) ]\n",
+    "#         results.append(result)\n",
     "        print()\n",
-    "        print(' '.join(results[i]))"
+    "        print(' '.join([ str(round(a, 2)) for a in result ]))\n",
+    "#     for i in range(m):\n",
+    "#         print(sum(column(results, i)))\n",
+    "#         print(column(betas, i))\n",
+    "        \n",
+    "def column(a, j):\n",
+    "    col = []\n",
+    "    m = len(a)\n",
+    "    for i in range(m):\n",
+    "        col.append(a[i][j])\n",
+    "    return col\n",
+    "\n",
+    "def dot(x, y):\n",
+    "    return sum(a * b for (a, b) in zip(x, y))\n",
+    "\n",
+    "def product(x, y):\n",
+    "    return [a * b for (a, b) in zip(x, y)]"
    ]
   },
   {
@@ -171,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [
     {
@@ -182,9 +201,9 @@
       "\n",
       "11111111222222222211111111\n",
       "\n",
-      "0.24087379358746808 0.2340879800107745 0.2737360750684785 0.2639282430864752 0.3055696366696417 0.29316632885340455 0.3380271853748625 0.3202990835941842 0.17370143808441862 0.10659356366969079 0.07687600826705111 0.06561507175793106 0.06519148731091888 0.07440693263793226 0.09742459016240625 0.14572197975082435 0.2439408598065487 0.4426050896848212 0.8442655361560182 0.9248711156153782 0.9466086904077708 0.9575586846569769 0.9663534579981261 0.9735965198844854 0.9743863720160683 0.9422168142920906\n",
+      "0.86 0.77 0.88 0.78 0.89 0.8 0.91 0.86 0.46 0.27 0.19 0.15 0.14 0.14 0.15 0.19 0.28 0.47 0.89 0.96 0.98 0.98 0.98 0.98 0.97 0.94\n",
       "\n",
-      "0.019163764066848044 0.03227914843897203 0.018829568480130947 0.034785451147469004 0.02095600029964889 0.039944985430342715 0.025476069809484067 0.05028094787384945 0.19771785775133194 0.26825464099637575 0.3029733041485886 0.3206710997073234 0.32958174106175636 0.33255948163338933 0.32898322489304105 0.3146319512948029 0.2795898032863227 0.20315284156602006 0.043126185583541185 0.013812317080820112 0.008496807756023229 0.007632004359246276 0.007819234372834436 0.009399110518956153 0.017360347855776018 0.057783185707909454\n"
+      "0.14 0.23 0.12 0.22 0.11 0.2 0.09 0.14 0.54 0.73 0.81 0.85 0.86 0.86 0.85 0.81 0.72 0.53 0.11 0.04 0.02 0.02 0.02 0.02 0.03 0.06\n"
      ]
     }
    ],
@@ -194,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -205,22 +224,15 @@
       "\n",
       "21212122111111111122222222\n",
       "\n",
-      "0.0047233496791236115 0.005850074272545519 0.007021421256200498 0.008695082669016007 0.010431949226582157 0.012905068654668504 0.015438424317861322 0.01895310427599957 0.023631415797798715 0.02888098615807586 0.035296512271135845 0.04313649660853917 0.05271570316444725 0.0644150091702606 0.07868742878947363 0.09604578120503712 0.11698315640054963 0.14166470906774883 0.16886031576046184 0.20528961832336684 0.24940275350592542 0.30241823051942573 0.3648039048494537 0.4337931342394115 0.495049504950495 0.495049504950495\n",
+      "0.5 0.51 0.5 0.51 0.5 0.51 0.5 0.5 0.51 0.51 0.51 0.51 0.51 0.51 0.51 0.51 0.51 0.51 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5\n",
       "\n",
-      "0.0030682729408843725 0.0036910920792841764 0.004561725803439631 0.005488188268508997 0.006784314458069539 0.008167468783027453 0.010113611618382312 0.0122325128460803 0.01465385483972042 0.01790921712156559 0.02188784032185435 0.026750597688309816 0.0326945601204603 0.03996208309534493 0.04885428936764239 0.05975532779812068 0.0731874903854239 0.08996194060533948 0.11163580819368082 0.13580821951276603 0.1652822755072756 0.20137533156254364 0.24608092079978627 0.30311075355648487 0.3812126262131163 0.504950495049505\n"
+      "0.5 0.49 0.5 0.49 0.5 0.49 0.5 0.5 0.49 0.49 0.49 0.49 0.49 0.49 0.49 0.49 0.49 0.49 0.5 0.5 0.5 0.5 0.5 0.5 0.5 0.5\n"
      ]
     }
    ],
    "source": [
     "check()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
