--- a/ml1.ipynb
+++ b/ml1.ipynb
@@ -1662,7 +1662,7 @@
     "    X_over = pd.concat([X_over, X_max])\n",
     "    y_over = pd.concat([y_over, y_max])\n",
     "    \n",
-    "    # Возвращает данные, сбалансированные методом undersampling\n",
+    "    # Возвращает данные, сбалансированные методом oversampling\n",
     "    return X_over, y_over"
    ]
   },
