--- a/HW3_Trees.ipynb
+++ b/HW3_Trees.ipynb
@@ -414,9 +414,9 @@
     "\n",
     "- обрабатывать пропущенные значения не надо, так как в датасетах cancer и spam нет значений None или странных выбросов\n",
     "\n",
-    "- для датасета cancer модель kNN дает результаты немного лучше (по метрикам и по площади под ROC), чем decision tree; это можно объяснить \n",
+    "- для датасета cancer модель kNN дает результаты немного лучше (по метрикам и по площади под ROC), чем decision tree\n",
     "\n",
-    "- для датасета spam модель decision tree дает результаты заметно лучше (по метрикам и по площади под ROC), чем kNN; это можно объяснить"
+    "- для датасета spam модель decision tree дает результаты заметно лучше (по метрикам и по площади под ROC), чем kNN"
    ]
   },
   {
