--- a/HW4_Ensembles.ipynb
+++ b/HW4_Ensembles.ipynb
@@ -1022,7 +1022,7 @@
     "\n",
     "лучшее accuracy = 0.933 дает RandomForestClassifier\n",
     "\n",
-    "лучшее AUC = 0.976 дает catboost.CatBoostClassifier0.971 RandomForestClassifier\n",
+    "лучшее AUC = 0.976 дает catboost.CatBoostClassifier против 0.971 у RandomForestClassifier\n",
     "\n",
     "все библиотечные модели обучаются быстрее RandomForestClassifier на обоих датасетах\n",
     "\n",
