--- a/HW7_SVM.ipynb
+++ b/HW7_SVM.ipynb
@@ -53,21 +53,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "CPU times: user 30 ms, sys: 0 ns, total: 30 ms\n",
-      "Wall time: 29.6 ms\n",
-      "CPU times: user 4.01 ms, sys: 0 ns, total: 4.01 ms\n",
-      "Wall time: 3.9 ms\n",
-      "cancer AUC: 0.9995629370629371\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cancer = pandas.read_csv('hw7_data/cancer.csv')\n",
     "X_cancer = cancer.drop(['label'], axis=1)\n",
@@ -76,8 +64,28 @@
     "X_spam = spam.drop(['label'], axis=1)\n",
     "y_spam = spam['label']\n",
     "X_cancer_train, X_cancer_test, y_cancer_train, y_cancer_test = train_test_split(X_cancer, y_cancer, train_size=0.8, shuffle=False)\n",
-    "X_spam_train, X_spam_test, y_spam_train, y_spam_test = train_test_split(X_spam, y_spam, train_size=0.8, shuffle=False)\n",
-    "clf = make_pipeline(StandardScaler(), SVC(gamma='auto', probability=True))\n",
+    "X_spam_train, X_spam_test, y_spam_train, y_spam_test = train_test_split(X_spam, y_spam, train_size=0.8, shuffle=True)\n",
+    "clf = make_pipeline(StandardScaler(), SVC(gamma='auto', probability=True))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 87.3 ms, sys: 0 ns, total: 87.3 ms\n",
+      "Wall time: 85.2 ms\n",
+      "CPU times: user 4.06 ms, sys: 0 ns, total: 4.06 ms\n",
+      "Wall time: 3.62 ms\n",
+      "cancer AUC: 0.9995629370629371\n"
+     ]
+    }
+   ],
+   "source": [
     "%time clf.fit(X_cancer_train, y_cancer_train)\n",
     "%time pred_cancer = clf.predict_proba(X_cancer_test)\n",
     "print(\"cancer AUC:\", roc_auc_score(y_cancer_test, pred_cancer[:, 1]))"
@@ -85,13 +93,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 2.75 s, sys: 18.4 ms, total: 2.77 s\n",
+      "Wall time: 2.77 s\n",
+      "CPU times: user 115 ms, sys: 3.71 ms, total: 119 ms\n",
+      "Wall time: 119 ms\n",
+      "spam AUC: 0.978269439243126\n"
+     ]
+    }
+   ],
    "source": [
     "%time clf.fit(X_spam_train, y_spam_train)\n",
     "%time pred_spam = clf.predict_proba(X_spam_test)\n",
-    "print(\"spam AUC:\", roc_auc_score(y_spam_test, pred_cancer[:, 1]))"
+    "print(\"spam AUC:\", roc_auc_score(y_spam_test, pred_spam[:, 1]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "svm.SVC сопоставим по скорости обучения с lgb.LGBMClassifier и в разы быстрее "
    ]
   }
  ],
