--- a/HW9_local_and_global_search.ipynb
+++ b/HW9_local_and_global_search.ipynb
@@ -233,7 +233,9 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -289,13 +291,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def annealing(n_steps, df):\n",
+    "def annealing(df, n_steps, hot, cold, switch_every):\n",
     "    a = df.copy().to_numpy()\n",
     "    n = len(a)\n",
+    "    ts = [hot, cold]\n",
     "    for step in range(n_steps):\n",
     "        d = l1(a)\n",
     "        deltas = []\n",
@@ -309,33 +312,36 @@
     "                    ijs.append((i, j))\n",
     "                flip(a, j, i)\n",
     "        if len(deltas) == 0:\n",
-    "            print(step)\n",
+    "            print('finished after step:', step)\n",
     "            return a[:,0], d\n",
-    "        p = np.array(deltas)/sum(deltas)\n",
-    "        k = np.random.choice(len(ijs), p=p)\n",
-    "        flip(a, ijs[k][0], ijs[k][1])\n",
+    "        p = np.exp(np.array(deltas)/(ts[0]*max(deltas)))\n",
+    "        k = np.random.choice(len(ijs), p=p/sum(p))\n",
+    "        flip(a, ijs[k][0], ijs[k][1]) # best direction to move\n",
+    "        if step > 0 and step % switch_every == 0:\n",
+    "            ts = np.flip(ts) # change temperature\n",
     "    return a[:,0], l1(a)  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "64\n",
-      "(array([17, 18, 49, 39,  6,  4, 43, 10,  9, 33, 28, 27, 13, 14, 47, 26, 29,\n",
-      "       16, 35, 36, 37, 40, 38,  5, 15, 24, 46, 44, 23, 21,  3, 41,  8, 19,\n",
-      "       45, 32, 22,  1, 50, 20, 42,  2,  7, 30, 31, 34, 48, 25, 12, 51, 11,\n",
-      "       52]), 11985.0)\n"
+      "(array([19, 45, 32, 15, 43, 41,  8,  9, 10, 33, 11, 52, 13, 14, 47, 29, 20,\n",
+      "       21, 17,  3, 18, 31, 22,  1, 34, 28, 27, 26, 16, 50, 44,  5, 24, 38,\n",
+      "       37, 36, 35, 39, 40, 49, 23, 30,  2,  7, 42, 46, 48,  6,  4, 25, 12,\n",
+      "       51]), 13260.0)\n",
+      "CPU times: user 2.37 s, sys: 3.99 ms, total: 2.38 s\n",
+      "Wall time: 2.37 s\n"
      ]
     }
    ],
    "source": [
-    "print(annealing(100, df))"
+    "%time print(annealing(df, n_steps=50, hot=10, cold=0.1, switch_every=5))"
    ]
   },
   {
